...
    <com.kidscademy.atlas.view.ReaderContextualView
        android:id="@+id/reader_contextual_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.kidscademy.atlas.view.ReaderFactsView
        android:id="@+id/reader_facts_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <com.kidscademy.atlas.view.ReaderRelatedView
        android:id="@+id/reader_related_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.kidscademy.atlas.view.ReaderLinksView
        android:id="@+id/reader_links_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</merge>
